Disable preview features; they're unnecessary