@@ -4,15 +4,6 @@ java {
     sourceCompatibility = JavaVersion.VERSION_16
     targetCompatibility = JavaVersion.VERSION_16
 }
-tasks.withType(JavaCompile) {
-    options.compilerArgs += '--enable-preview'
-}
-tasks.withType(Test) {
-    jvmArgs += '--enable-preview'
-}
-tasks.withType(JavaExec) {
-    jvmArgs += '--enable-preview'
-}
 
 publishing {
     repositories {
